# zippy

./: pyproject.toml
zippy/: zippy.py
