[tool.poetry]
name = "thinkst-zippy"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{ include = "zippy" }]
include = ["zippy/**/*.txt"]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.3"
colorama = "^0.4.6"

[tool.poetry.scripts]
zippy = "zippy.zippy:main"
